F12 doesn't render View Layers correctly (with Grease Pencil Objects) #63099

Closed
opened 2019-03-29 15:59:07 +01:00 by Michael Hermann · 18 comments

viewlayer_render_bug.blend

{F6898864}System Information
Operating system: Linux-5.0.4-arch1-1-ARCH-x86_64-with-arch 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 52), branch: master, commit date: 2019-03-29 00:43, hash: 99d4321fef
Worked: (optional)

Short description of error
View Layers yield different render results when using either F12 or using the Render Buttons on each Render Layer Node (Compositor). The result should be the same. I have only seen this occur with Grease Pencil for now.
I used factory settings to test.

Exact steps for others to reproduce the error
See attached .blend file:

  1. Press F12 and see the result
  2. Press RENDER on each Render Layer Node and compare.
[viewlayer_render_bug.blend](https://archive.blender.org/developer/F6898847/viewlayer_render_bug.blend) {[F6898864](https://archive.blender.org/developer/F6898864/system-info.txt)}**System Information** Operating system: Linux-5.0.4-arch1-1-ARCH-x86_64-with-arch 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 52), branch: master, commit date: 2019-03-29 00:43, hash: `99d4321fef` Worked: (optional) **Short description of error** View Layers yield different render results when using either F12 or using the Render Buttons on each Render Layer Node (Compositor). The result should be the same. I have only seen this occur with Grease Pencil for now. I used factory settings to test. **Exact steps for others to reproduce the error** See attached .blend file: 1) Press F12 and see the result 2) Press RENDER on each Render Layer Node and compare.

Added subscriber: @MichaelHermann

Added subscriber: @MichaelHermann

Added subscribers: @brecht, @antoniov

Added subscribers: @brecht, @antoniov

@brecht I remember we had a similar problem when render in some situations with cycles. It looks the image of Cycles is not available when try to render the grease pencil or something like that, and the grease pencil is canceled. Maybe is a clue for you, but I tested that running in debug inside VS2017 always worked (maybe some thread priority topic).

If you render in Eevee works perfect, but when you render with F12 in Cycles (I set to new window render), the mask image is not created.

PS: Try to render, for example frame 83, to get a full image on mask layer.

@brecht I remember we had a similar problem when render in some situations with cycles. It looks the image of Cycles is not available when try to render the grease pencil or something like that, and the grease pencil is canceled. Maybe is a clue for you, but I tested that running in debug inside VS2017 always worked (maybe some thread priority topic). If you render in Eevee works perfect, but when you render with F12 in Cycles (I set to new window render), the mask image is not created. PS: Try to render, for example frame 83, to get a full image on mask layer.

@MichaelHermann Could you try using Eevee render?

@MichaelHermann Could you try using Eevee render?

@antoniov Seems to work as expected with Eevee. No issues.

Edit: I just tried Cycles again only GPU and only CPU with one thread. -> Same problem. (In case this helps)

@antoniov Seems to work as expected with Eevee. No issues. Edit: I just tried Cycles again only GPU and only CPU with one thread. -> Same problem. (In case this helps)

I got an assert running with debug:

Callstack:

>	blender.exe!batch_vao_get(GPUBatch * batch) Line 232	C

 	blender.exe!GPU_batch_program_set_no_use(GPUBatch * batch, unsigned int program, const GPUShaderInterface * shaderface) Line 302	C
 	blender.exe!draw_geometry_execute_ex(DRWShadingGroup * shgroup, GPUBatch * geom, unsigned int start, unsigned int count, bool draw_instance) Line 877	C
 	blender.exe!draw_geometry_execute(DRWShadingGroup * shgroup, GPUBatch * geom) Line 887	C
 	blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1252	C
 	blender.exe!drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) Line 1328	C
 	blender.exe!DRW_draw_pass(DRWPass * pass) Line 1367	C
 	blender.exe!workbench_deferred_draw_scene(WORKBENCH_Data * vedata) Line 1157	C
 	blender.exe!workbench_solid_draw_background(void * vedata) Line 66	C
 	blender.exe!drw_engines_draw_background() Line 1082	C
 	blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1538	C
 	blender.exe!DRW_draw_view(const bContext * C) Line 1436	C
 	blender.exe!view3d_draw_view(const bContext * C, ARegion * ar) Line 1390	C
 	blender.exe!view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1412	C
 	blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 512	C
 	blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 590	C
 	blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 724	C
 	blender.exe!wm_draw_update(bContext * C) Line 877	C
 	blender.exe!WM_main(bContext * C) Line 425	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 507	C

Edit: It's really weird, now all it's working fine when press F12.

I got an assert running with debug: Callstack: ``` > blender.exe!batch_vao_get(GPUBatch * batch) Line 232 C blender.exe!GPU_batch_program_set_no_use(GPUBatch * batch, unsigned int program, const GPUShaderInterface * shaderface) Line 302 C blender.exe!draw_geometry_execute_ex(DRWShadingGroup * shgroup, GPUBatch * geom, unsigned int start, unsigned int count, bool draw_instance) Line 877 C blender.exe!draw_geometry_execute(DRWShadingGroup * shgroup, GPUBatch * geom) Line 887 C blender.exe!draw_shgroup(DRWShadingGroup * shgroup, DRWState pass_state) Line 1252 C blender.exe!drw_draw_pass_ex(DRWPass * pass, DRWShadingGroup * start_group, DRWShadingGroup * end_group) Line 1328 C blender.exe!DRW_draw_pass(DRWPass * pass) Line 1367 C blender.exe!workbench_deferred_draw_scene(WORKBENCH_Data * vedata) Line 1157 C blender.exe!workbench_solid_draw_background(void * vedata) Line 66 C blender.exe!drw_engines_draw_background() Line 1082 C blender.exe!DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * ar, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1538 C blender.exe!DRW_draw_view(const bContext * C) Line 1436 C blender.exe!view3d_draw_view(const bContext * C, ARegion * ar) Line 1390 C blender.exe!view3d_main_region_draw(const bContext * C, ARegion * ar) Line 1412 C blender.exe!ED_region_do_draw(bContext * C, ARegion * ar) Line 512 C blender.exe!wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 590 C blender.exe!wm_draw_window(bContext * C, wmWindow * win) Line 724 C blender.exe!wm_draw_update(bContext * C) Line 877 C blender.exe!WM_main(bContext * C) Line 425 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 507 C ``` Edit: It's really weird, now all it's working fine when press F12.

Here a simplified test file:

Cycles_ViewLayer_bug.blend

Here a simplified test file: [Cycles_ViewLayer_bug.blend](https://archive.blender.org/developer/F6900733/Cycles_ViewLayer_bug.blend)

@brecht I'm not sure what is going on here. Could you take a look?

Try with my simplified test file.

@brecht I'm not sure what is going on here. Could you take a look? Try with my simplified test file.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

@antoniov I am not able to reproduce this issue anymore. Are you?

@antoniov I am not able to reproduce this issue anymore. Are you?

@Jeroen-Bakker I cannot reproduce the issue anymore with last compilation, so I think we can close the report.

@Jeroen-Bakker I cannot reproduce the issue anymore with last compilation, so I think we can close the report.

I am still seeing the same results in Cycles. In my file, as well as in your testfile, @antoniov
I tried with the build from last night.

version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-04-04 19:22, hash: b2e2db94bdae, type: Release
build date: 2019-04-04, 23:03:13
platform: Linux
I am still seeing the same results in Cycles. In my file, as well as in your testfile, @antoniov I tried with the build from last night. ``` version: 2.80 (sub 53), branch: blender2.7, commit date: 2019-04-04 19:22, hash: b2e2db94bdae, type: Release build date: 2019-04-04, 23:03:13 platform: Linux ```

This comment was removed by @antoniov

*This comment was removed by @antoniov*

@MichaelHermann You are right, I tested by error in Eevee. In Cycles fails.

@MichaelHermann You are right, I tested by error in Eevee. In Cycles fails.

@antoniov Thank you for checking it out again! :)

@antoniov Thank you for checking it out again! :)

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Jeroen Bakker self-assigned this 2019-05-07 15:00:27 +02:00
Member

Ok I understand. the issue is that the GP layer on the mask is not rendered during final rendering. When rendering individual layers it is.
Might be a pipeline issue. will look into it in more detail.

Eevee seems to be the only one that composites the results correctly during rendering.

When workbench is selected the main scene GP_Eye will already have the Mask composited during final rendering. while rendering individually this is not the case.
It might be this is the result that workbench does not support output layers.

Seems to be an issue in the draw manager. It assumed that the first renderlayer was the one that GP needed to draw on. When having multiple renderlayers this is different, this was neglected by the draw manager.

Ok I understand. the issue is that the GP layer on the mask is not rendered during final rendering. When rendering individual layers it is. Might be a pipeline issue. will look into it in more detail. Eevee seems to be the only one that composites the results correctly during rendering. When workbench is selected the main scene GP_Eye will already have the Mask composited during final rendering. while rendering individually this is not the case. It might be this is the result that workbench does not support output layers. Seems to be an issue in the draw manager. It assumed that the first renderlayer was the one that GP needed to draw on. When having multiple renderlayers this is different, this was neglected by the draw manager.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63099
No description provided.